feature-081: code optimization, improve code readability